--- a/mp-api/site/index.html
+++ b/mp-api/site/index.html
@@ -125,9 +125,9 @@
 
 <section class="form-container">
     <h3>Finalize sua compra</h3>
-    <form>
-        <input type="text" placeholder="Nome Completo" required>
-        <input type="tel" placeholder="Telefone (WhatsApp)" required>
+    <form id="payment-form">
+        <input type="text" id="buyer-name" placeholder="Nome Completo" required>
+        <input type="tel" id="buyer-phone" placeholder="Telefone (WhatsApp)" required>
         <p>Números selecionados: <span id="selected-numbers">Nenhum</span></p>
         <p>Total: R$ <span id="total-price">0</span></p>
         <button type="submit">Pagar com Pix/Cartão</button>
@@ -173,6 +173,50 @@
 
         numberContainer.appendChild(numDiv);
     }
+
+    // Enviar dados para a API
+    document.getElementById('payment-form').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Impede o recarregamento da página
+
+        const buyerName = document.getElementById('buyer-name').value;
+        const buyerPhone = document.getElementById('buyer-phone').value;
+        const quantity = selectedNumbers.length;
+
+        if (quantity === 0) {
+            alert('Por favor, selecione pelo menos um número.');
+            return;
+        }
+
+        if (!buyerName || !buyerPhone) {
+            alert('Por favor, preencha nome e telefone.');
+            return;
+        }
+
+        try {
+            const response = await fetch('https://mp-api.onrender.com/create_preference', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    quantity: quantity,
+                    buyerName: buyerName,
+                    buyerPhone: buyerPhone
+                })
+            });
+
+            const data = await response.json();
+
+            if (data.init_point) {
+                window.location.href = data.init_point; // Redireciona para o link de pagamento
+            } else {
+                alert('Erro ao criar o pagamento. Tente novamente.');
+            }
+        } catch (error) {
+            console.error(error);
+            alert('Erro ao conectar com o servidor. Tente novamente mais tarde.');
+        }
+    });
 </script>
 
 </body>
