--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         }
 
         try {
-            const response = await fetch('https://mp-api.onrender.com/create_preference', {
+            const response = await fetch('https://rifa-miguel.onrender.com/create_preference', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
